--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="refresh"
-      content="0; url=https://srizza93.github.io/interview-test/dist/index.html"
+      content="0; url=https://srizza93.github.io/interview-test/dist/#/"
     />
     <title>Bridge</title>
   </head>
