Loader timer fix

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      http-equiv="refresh"
-      content="0; url=https://srizza93.github.io/interview-test/dist/#/"
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/s-icon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Inter"
+      rel="stylesheet"
     />
-    <title>Bridge</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Excuses de Dev</title>
   </head>
-  <body></body>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
